test/tests/bad/undef-ctor.carth
;; UndefCtor

(define undef-ctor ThisCtorIsUndefined)
